--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<script type="text/javascript" src="script.js">
+	<script  type="text/javascript" src="script.js">
 	</script>
-
+	<script>
+		alert( "Я-javascript!");
+	</script>
 </body>
-</html>
+</html>	
