--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script  type="text/javascript" src="script.js">
 	</script>
 	<script>
-		alert( "Я-javascript!");
+		// alert( "Я-javascript!");
 	</script>
 </body>
 </html>	
